fix: modify the scrollbar style

--- a/src/components/ByMeList/index.less
+++ b/src/components/ByMeList/index.less
@@ -1,5 +1,4 @@
 .byMeList {
-  padding: 0 0.625rem;
   .list:last-child {
     border-bottom: none;
   }
