--- a/src/pages/Main/Mine/TaskCreate/index.less
+++ b/src/pages/Main/Mine/TaskCreate/index.less
@@ -9,6 +9,7 @@
 
     .info {
       margin-top: 1.25rem;
+      padding: 0 0.625rem;
       border-radius: 0.625rem;
       background: rgba(255, 255, 255, 1);
 
@@ -27,7 +28,7 @@
       }
 
       .profile {
-        padding: 0.9375rem 0.625rem;
+        padding: 0.9375rem 0;
 
         .right {
           width: 62%;
@@ -37,7 +38,7 @@
 
       .share {
         align-items: center;
-        padding: 0.625rem;
+        padding: 0.625rem 0;
 
         .right {
           width: 62%;
@@ -48,7 +49,7 @@
       }
 
       .requiredPlatforms {
-        padding: 0.9375rem 0.625rem;
+        padding: 0.9375rem 0;
         .title {
           font-size: 1rem;
           font-weight: 700;
@@ -81,7 +82,7 @@
       }
 
       .setting {
-        padding: 0.9375rem 0.625rem;
+        padding: 0.9375rem 0;
 
         .title {
           font-size: 1rem;
